RESOLVED FIXED134669
DOMWindows should register themselves with the GamepadManager when they have event listeners
https://bugs.webkit.org/show_bug.cgi?id=134669
Summary DOMWindows should register themselves with the GamepadManager when they have ...
Brady Eidson
Reported 2014-07-06 17:08:59 PDT
DOMWindows should register themselves with the GamepadManager when they have event listeners This will let us easily target all DOMWindows that might listen to gamepad events, as well as help us know when we should be listening for new gamepad connections.
Attachments
Patch v1 (10.78 KB, patch)
2014-07-06 17:27 PDT, Brady Eidson
no flags
Patch v1a (rebased, ready to EWS) (10.73 KB, patch)
2014-07-07 19:37 PDT, Brady Eidson
no flags
Brady Eidson
Comment 1 2014-07-06 17:27:34 PDT
Created attachment 234471 [details] Patch v1 This patch relies on the patch in 134670, so it probably won't apply right now. I'm just attaching it for posterity.
Brady Eidson
Comment 2 2014-07-07 19:37:08 PDT
Created attachment 234538 [details] Patch v1a (rebased, ready to EWS)
WebKit Commit Bot
Comment 3 2014-07-07 19:38:21 PDT
Attachment 234538 [details] did not pass style-queue: ERROR: Source/WebCore/dom/EventNames.h:285: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/WebCore/dom/EventNames.h:288: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] Total errors found: 2 in 6 files If any of these errors are false positives, please file a bug against check-webkit-style.
Brady Eidson
Comment 4 2014-07-07 20:40:45 PDT
(In reply to comment #3) > Attachment 234538 [details] did not pass style-queue: > > > ERROR: Source/WebCore/dom/EventNames.h:285: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] > ERROR: Source/WebCore/dom/EventNames.h:288: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] > Total errors found: 2 in 6 files > > > If any of these errors are false positives, please file a bug against check-webkit-style. While these macro newlines and comments are non-standard style, they're quite consistent within this file. =/
WebKit Commit Bot
Comment 5 2014-07-08 23:50:59 PDT
Comment on attachment 234538 [details] Patch v1a (rebased, ready to EWS) Clearing flags on attachment: 234538 Committed r170911: <http://trac.webkit.org/changeset/170911>
WebKit Commit Bot
Comment 6 2014-07-08 23:51:03 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.